[package]
name = "preconf-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
# Commit Boost
cb-metrics = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "1a5169670e7e4bb17efbaec2fd49d581c1f1025d" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "1a5169670e7e4bb17efbaec2fd49d581c1f1025d" }

# Ethereum
alloy = { version = "0.1.3", features = ["ssz", "rpc-types-beacon", "serde"] }
ssz_types = "0.5"
ethereum_serde_utils = "0.5.2"
ethereum-types = "0.14.1"

# Networking
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-eventsource = "0.6.0"

# Async / Threads
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
dashmap = "5.5.3"

# Serialization
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.3.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Crypto
tree_hash = "0.5"
tree_hash_derive = "0.5"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5.3"

# Misc
thiserror = "1.0.61"
eyre = "0.6.12"
url = "2.5.0"
rand = "0.8.5"
